[package]
name = "rudp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = "0.4.0"
rand = "0.8.5"
ring = "0.16.20"
tokio = { version = "1", features = ["full"] }
socket2 = {version = "0.5.1", features= ["all"]}

